# mediamtx-manager

./: .gitignore  CLAUDE.md  Cargo.toml
.claude/: settings.local.json
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs
crates/core/src/api_client/: config.rs  mod.rs  paths.rs
crates/core/src/config_file/: hot_reload.rs  mod.rs
crates/core/src/models/: config.rs  mod.rs  path.rs  process.rs
crates/core/src/process/: download.rs  lifecycle.rs  mod.rs
crates/tauri-app/: Cargo.toml  tauri.conf.json
crates/tauri-app/capabilities/: default.json
crates/tauri-app/src/: main.rs
crates/tauri-app/src/commands/: config.rs  config_file.rs  mod.rs  paths.rs  process.rs
crates/web-server/: Cargo.toml
crates/web-server/src/: error.rs  main.rs
crates/web-server/src/routes/: config.rs  config_file.rs  mod.rs  paths.rs  process.rs  proxy.rs
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: adapter.ts  http-client.ts  tauri-client.ts  types.ts
frontend/src/components/layout/: app-layout.tsx  sidebar.tsx
frontend/src/components/stream/: hls-player.tsx  webrtc-player.tsx
frontend/src/pages/: dashboard.tsx  paths.tsx  settings.tsx  streams.tsx
