[package]
name = "mediamtx-manager-web"
version.workspace = true
edition.workspace = true

[dependencies]
mediamtx-manager-core = { path = "../core" }
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
